--- a/translations/kangyur/translations/073-001_toh340-the_hundred_deeds.xml
+++ b/translations/kangyur/translations/073-001_toh340-the_hundred_deeds.xml
@@ -4,15 +4,13 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">las brgya pa</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Karmaśataka</title>
                 <title type="mainTitle" xml:lang="en">The Hundred Deeds</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">las brgya tham pa</title>
-                <title type="otherTitle" xml:lang="zh">百业经</title>
-                <title type="longTitle" xml:lang="Sa-Ltn">Karmaśataka</title>
-                <title type="longTitle" xml:lang="en">The Hundred Deeds</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Karmaśataka</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">las brgya pa</title>
                 <title type="mainTitle" xml:lang="bo">ལས་བརྒྱ་པ།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">las brgya tham pa</title>
                 <title type="longTitle" xml:lang="bo">ལས་བརྒྱ་ཐམ་པ།</title>
+                <title type="otherTitle" xml:lang="zh">《百業經》</title>
                 <author role="translatorMain" ref="contributors.xml#team-33">Translated by Dr.
                     Lozang Jamspal (International Buddhist College, Thailand) and Kaia Tara Fischer
                     under the patronage and supervision of 84000: Translating the Words of the
@@ -32,7 +30,7 @@
                 <sponsor ref="sponsors.xml#sponsor-25">Ye Kong, Helen Ying Han and family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.3.23 <date>2022</date>
+                <edition>v 1.3.25 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -67,7 +65,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-01-04T21:49:44.392Z" user="admin">04/01/2022 21:49:44</note>
+                <note type="lastUpdated" date-time="2022-06-29T16:03:05.679Z" user="admin">29/06/2022 16:03:05</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2019-06-29T22:29:07.138Z" user="konchog">2.b</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2019-07-17T09:48:24.029Z" user="mike">2.a</note>
                 <note type="updated" update="text-version" value="v 1.0.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</note>
@@ -105,17 +103,18 @@
                 <note type="updated" update="text-version" value="1.3.12" date-time="2020-12-03T20:53:58.751Z" user="laura">Edits to repeat phrase "he set out surrounded and attended by an assembly of monks" (per email with John and Kaia)</note>
                 <note type="updated" update="text-version" value="1.3.13" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
                 <note type="updated" update="text-version" value="1.3.14" date-time="2021-01-18T13:39:12.771Z" user="admin">Ref with collaboration url corrected</note>
-            
-    <note type="updated" update="text-version" value="1.3.15" date-time="2021-01-25T22:19:56.807Z" user="celso">corrected some mislabed foreign tags</note>
-    <note type="updated" update="text-version" value="1.3.16" date-time="2021-02-03T00:42:25.524Z" user="celso">updated definition for glossary term prātimokṣa</note>
-    <note type="updated" update="text-version" value="1.3.17" date-time="2021-02-07T15:25:56.34Z" user="celso">corrected bad link</note>
-    <note type="updated" update="text-version" value="1.3.18" date-time="2021-03-29T06:34:34.327Z" user="mike">typo corrected</note>
-    <note type="updated" update="text-version" value="1.3.19" date-time="2021-04-21T11:06:58.463Z" user="mike">a few minor typos corrected</note>
+                <note type="updated" update="text-version" value="1.3.15" date-time="2021-01-25T22:19:56.807Z" user="celso">corrected some mislabed foreign tags</note>
+                <note type="updated" update="text-version" value="1.3.16" date-time="2021-02-03T00:42:25.524Z" user="celso">updated definition for glossary term prātimokṣa</note>
+                <note type="updated" update="text-version" value="1.3.17" date-time="2021-02-07T15:25:56.34Z" user="celso">corrected bad link</note>
+                <note type="updated" update="text-version" value="1.3.18" date-time="2021-03-29T06:34:34.327Z" user="mike">typo corrected</note>
+                <note type="updated" update="text-version" value="1.3.19" date-time="2021-04-21T11:06:58.463Z" user="mike">a few minor typos corrected</note>
                 <note type="updated" update="text-version" value="1.3.20" date-time="2021-04-27T12:43:16.076Z" user="mike">More typos from Ush</note>
-    <note type="updated" update="text-version" value="1.3.21" date-time="2021-06-02T03:04:28.434Z" user="cabie-sim">Auto (update-sponsorship)</note>
-    <note type="updated" update="text-version" value="1.3.22" date-time="2021-06-10T15:31:22.793Z" user="laura">Corrected typo in glossary (nyong mongs)</note>
-    <note type="updated" update="text-version" value="1.3.23" date-time="2022-01-04T21:49:37.377Z" user="celso">karma to karman in Skt. field glossary</note>
-</notesStmt>
+                <note type="updated" update="text-version" value="1.3.21" date-time="2021-06-02T03:04:28.434Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="1.3.22" date-time="2021-06-10T15:31:22.793Z" user="laura">Corrected typo in glossary (nyong mongs)</note>
+                <note type="updated" update="text-version" value="1.3.23" date-time="2022-01-04T21:49:37.377Z" user="celso">karma to karman in Skt. field glossary</note>
+                <note type="updated" update="text-version" value="1.3.24" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.3.25" date-time="2022-06-29T16:03:03.508Z" user="cabie-sim">Auto (update-titles)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
@@ -13500,7 +13499,7 @@
                             <l>“You whom humans and gods alike revere—</l>
                             <l>You’ve nary an ailment: birth, aging, or death;</l>
                             <l>It is hard to behold you in even a thousand lifetimes,</l>
-                            <l>But today, O Sage, I see you and my life bears fruit.”</l>
+                            <l>But today, O <term>Sage</term>, I see you and my life bears fruit.”</l>
                         </lg>
                         <milestone unit="chunk" xml:id="UT22084-073-001-2180"/>
                         <lg tid="2123">
@@ -18913,7 +18912,7 @@
                         <lg tid="2952">
                             <l>“ ‘These countless restive, wicked persons</l>
                             <l>In the thrall of sin, these evil ones,</l>
-                            <l>Destroyed that bridge, the Sage’s teaching, </l>
+                            <l>Destroyed that bridge, the <term>Sage</term>’s teaching, </l>
                             <l>And now it’s gone. </l>
                         </lg>
                         <milestone unit="chunk" xml:id="UT22084-073-001-5679"/>
@@ -18922,7 +18921,7 @@
                             <l>Lax in conduct, whose lives are a ploy,</l>
                             <l>Dishonest folk, have destroyed that market, <ref cRef="F.270.a" type="folio" xml:id="UT22084-073-001-6605"/>
                             </l>
-                            <l>The Sage’s teaching, and now it’s gone. </l>
+                            <l>The <term>Sage</term>’s teaching, and now it’s gone. </l>
                         </lg>
                         <milestone unit="chunk" xml:id="UT22084-073-001-5680"/>
                         <lg tid="4894">
@@ -18942,12 +18941,12 @@
                         <lg tid="2953">
                             <l>“ ‘All of what the perfect sage predicted,</l>
                             <l>Everything has come to pass—</l>
-                            <l>A trifling remnant of the Sage’s teaching</l>
+                            <l>A trifling remnant of the <term>Sage</term>’s teaching</l>
                             <l>Remained, and now it’s gone.</l>
                         </lg>
                         <milestone unit="chunk" xml:id="UT22084-073-001-3033"/>
                         <lg tid="2954">
-                            <l>“ ‘The ocean of the Sage’s teaching</l>
+                            <l>“ ‘The ocean of the <term>Sage</term>’s teaching</l>
                             <l>Will be a wasteland before long.</l>
                             <l>The wanton, with their vulgar wisdom,</l>
                             <l>Through negligence have done their harm.</l>
@@ -19071,7 +19070,7 @@
                         <lg tid="4902">
                             <l>“ ‘So if there are some here</l>
                             <l>Well trained in the precepts</l>
-                            <l>Taught by the <term type="ignore">Lord</term> of Sages, the wise Śākya lion,</l>
+                            <l>Taught by the <term type="ignore">Lord</term> of <term>Sages</term>, the wise Śākya lion,</l>
                             <l>Please express your qualifications.’ </l>
                         </lg>
                         <milestone unit="chunk" xml:id="UT22084-073-001-3050"/>
@@ -19096,7 +19095,7 @@
                         </lg>
                         <milestone unit="chunk" xml:id="UT22084-073-001-3054"/>
                         <lg tid="2974">
-                            <l>“ ‘I have borne the precepts of the Sage, </l>
+                            <l>“ ‘I have borne the precepts of the <term>Sage</term>, </l>
                             <l>Never wavering.</l>
                             <l>With precision I have learned the precepts </l>
                             <l>of the Teacher’s monastic discipline.’ ”</l>
@@ -19154,7 +19153,7 @@
                         <milestone unit="chunk" xml:id="UT22084-073-001-3065"/>
                         <lg tid="2985">
                             <l>“When the holy Dharma </l>
-                            <l>Of the Great Sage vanishes, </l>
+                            <l>Of the Great <term>Sage</term> vanishes, </l>
                             <l>A great many beings, overcome by suffering, <ref cRef="F.272.a" type="folio" xml:id="UT22084-073-001-6609"/>
                             </l>
                             <l>Will perish then.</l>
@@ -19277,7 +19276,7 @@
                         <lg tid="4899">
                             <l>“ ‘The Teacher pointed out</l>
                             <l>The way to liberation, and, at the end, he entered nirvāṇa.</l>
-                            <l>The Sage’s wings of awakening</l>
+                            <l>The <term>Sage</term>’s wings of awakening</l>
                             <l>And paths to liberation are cut. They’re gone.</l>
                         </lg>
                         <milestone unit="chunk" xml:id="UT22084-073-001-3080"/>
@@ -19353,7 +19352,7 @@
                         <lg tid="3009">
                             <l>“ ‘Light is shrouded in gloom.</l>
                             <l>The deluded wander about,</l>
-                            <l>Bereft of the Sage’s teachings,</l>
+                            <l>Bereft of the <term>Sage</term>’s teachings,</l>
                             <l>Virtuous deeds cast aside.</l>
                         </lg>
                         <milestone unit="chunk" xml:id="UT22084-073-001-3091"/>
@@ -30835,7 +30834,7 @@
                     </div>
                 </div>
             </div>
-            <div type="glossary">
+            <div type="glossary" status="excluded">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-073-001-6036">
@@ -31717,12 +31716,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-073-001-5692">
+                        <gloss xml:id="UT22084-073-001-5692" type="term" mode="match">
                             <term>deva</term>
-                            <term xml:lang="Bo-Ltn">lha </term>
+                            <term xml:lang="Bo-Ltn">lha</term>
                             <term xml:lang="bo">ལྷ།</term>
                             <term xml:lang="Sa-Ltn">deva</term>
-                            <term type="definition">See “god.”</term>
+                            <term type="definition">Lit. “god.” An honorific term of address for royalty, similar to “Your Majesty.”</term>
                         </gloss>
                     </item>
                     <item>
@@ -31896,17 +31895,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-073-001-5137">
-                            <term>kinnara (spirit)</term>
-                            <term xml:lang="Bo-Ltn">mi’am ci </term>
+                        <gloss xml:id="UT22084-073-001-5137" type="term" mode="match">
+                            <term>kinnara</term>
+                            <term xml:lang="Bo-Ltn">mi’am ci</term>
                             <term xml:lang="bo">མིའམ་ཅི།</term>
                             <term xml:lang="Sa-Ltn">kinnara</term>
-                            <term type="definition">Classified among the gods, these celestial
-                                beings are sometimes depicted as half-human, half-horse (similar to
-                                centaurs) or half-human, half-bird. Whatever the case, they are
-                                considered creatures of surpassing beauty. Also the name of a
-                                person, see “<term>Kinnara</term>.”</term>
-                            <term type="alternative">kinnara</term>
+                            <term type="definition">Classified among the gods, these celestial beings are sometimes depicted as half-human, half-horse (similar to centaurs) or half-human, half-bird. Whatever the case, they are considered creatures of surpassing beauty. Also the name of a person, see “<term>Kinnara</term>.”</term>
                         </gloss>
                     </item>
                     <item>
@@ -32666,6 +32660,7 @@
                             <term xml:lang="Bo-Ltn">mtho ris dang thar pa dang ’bras bu </term>
                             <term xml:lang="bo">མཐོ་རིས་དང་ཐར་པ་དང་འབྲས་བུ།</term>
                             <term xml:lang="Sa-Ltn"/>
+                            <term type="alternative">resultant state of heaven and liberation</term>
                         </gloss>
                     </item>
                     <item>
@@ -32860,19 +32855,22 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-073-001-5212">
+                        <gloss xml:id="UT22084-073-001-5212" type="term" mode="match">
                             <term>sage</term>
-                            <term xml:lang="Bo-Ltn">drang srong </term>
+                            <term xml:lang="Bo-Ltn">drang srong</term>
                             <term xml:lang="bo">དྲང་སྲོང་།</term>
                             <term xml:lang="Sa-Ltn">ṛṣi</term>
-                            <term xml:lang="Bo-Ltn">thub pa </term>
-                            <term xml:lang="bo">དྲང་སྲོང་།</term>
-                            <term xml:lang="Sa-Ltn">muni</term>
                             <term type="definition">
-                                <foreign xml:lang="Bo-Ltn">drang srong</foreign> is literally “the righteous one”; ancient Vedic masters
-                                and practitioners (Rigzin
-                                200). Here also used as a specific epithet of the Buddha Śākyamuni.<!-- Also rendered here as “ṛṣi.”-->
-                            </term>
+                                <foreign xml:lang="Bo-Ltn">drang srong</foreign> is literally “the righteous one”; ancient Vedic masters and practitioners (Rigzin 200). </term>
+                        </gloss>
+                    </item>
+                    <item>
+                        <gloss type="term" mode="marked" xml:id="UT22084-073-001-6940">
+                            <term>sage</term>
+                            <term xml:lang="Bo-Ltn">thub pa</term>
+                            <term xml:lang="bo">ཐུབ་པ།</term>
+                            <term xml:lang="Sa-Ltn">muni</term>
+                            <term type="definition">A specific epithet of the Buddha Śākyamuni.</term>
                         </gloss>
                     </item>
                     <item>
@@ -35358,13 +35356,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-073-001-5403">
+                        <gloss xml:id="UT22084-073-001-5403" type="person" mode="match">
                             <term>Licchavi</term>
-                            <term xml:lang="Bo-Ltn">li tsa+tsha b+’i </term>
-                            <term xml:lang="bo">ལི་ཙྪ་བྰི།</term>
+                            <term xml:lang="Bo-Ltn">li tsa+tsha bI</term>
+                            <term xml:lang="bo">ལི་ཙྪ་བཱི།</term>
                             <term xml:lang="Sa-Ltn">Licchavi</term>
-                            <term type="definition">One of the great Indian clans during the time of
-                                the Buddha, their home was Vaiśālī.</term>
+                            <term type="definition">One of the great Indian clans during the time of the Buddha, their home was Vaiśālī.</term>
                         </gloss>
                     </item>
                     <item>
