--- a/translations/kangyur/translations/076-003_toh349-the_account_of_the_noble_deeds_of_srisena.xml
+++ b/translations/kangyur/translations/076-003_toh349-the_account_of_the_noble_deeds_of_srisena.xml
@@ -4,15 +4,11 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dpal gyi sde’i rtogs pa brjod pa</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Śrīsenāvadāna</title>
                 <title type="mainTitle" xml:lang="en">The Account of the Noble Deeds of Śrīsena</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Śrīsenāvadāna</title>
                 <title type="mainTitle" xml:lang="bo">དཔལ་གྱི་སྡེའི་རྟོགས་པ་བརྗོད་པ།</title>
-                <title type="longTitle" xml:lang="en"/>
-                <title type="longTitle" xml:lang="bo"/>
-                <title type="longTitle" xml:lang="Bo-Ltn"/>
-                <title type="longTitle" xml:lang="Sa-Ltn"/>
-                <title type="otherTitle" xml:lang="zh"/>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dpal gyi sde’i rtogs pa brjod pa</title>
+                <title type="otherTitle" xml:lang="zh">《吉祥軍譬喻經》</title>
                 <author role="translatorMain" ref="contributors.xml#team-19">Translated by the Lokākṣi Translator Group<lb/>
                     under the patronage and supervision of 84000: Translating the Words of the Buddha</author>
                 <editor role="externalReviewer" ref="contributors.xml#person-271">Karen Lang</editor>
@@ -30,7 +26,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.3 <date>2021</date>
+                <edition>v 1.0.5 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -67,37 +63,38 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-06-09T12:15:34.304Z" user="admin">09/06/2021 12:15:34</note>
-            
-<note type="updated" update="text-version" value="v 0.1.0" date-time="2019-11-19T09:53:56.455Z" user="andreas">v 0.1.0</note>
-<note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:21:45.49Z" user="mike">2.d</note>
-<note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T10:59:57.706Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.1.1" date-time="2020-10-20T11:28:10.758Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.1.2" date-time="2020-10-20T11:29:10.266Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.1.3" date-time="2020-10-20T11:30:32.107Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.g" date-time="2020-10-20T11:31:08.704Z" user="line-tofte">2.g</note>
-    <note type="updated" update="text-version" value="0.1.4" date-time="2020-10-20T11:31:08.704Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.1.5" date-time="2020-11-06T09:17:15.641Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.e" date-time="2020-11-06T09:18:41.394Z" user="line-tofte">2.e</note>
-    <note type="updated" update="text-version" value="0.1.6" date-time="2020-11-06T09:18:41.394Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="2.d" date-time="2021-01-12T12:35:08.998Z" user="line-tofte">2.d</note>
-    <note type="updated" update="text-version" value="0.1.7" date-time="2021-01-12T12:35:08.998Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="2.c" date-time="2021-01-12T14:01:11.73Z" user="line-tofte">2.c</note>
-    <note type="updated" update="text-version" value="0.1.8" date-time="2021-01-12T14:01:11.73Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.1.9" date-time="2021-01-27T12:29:52.802Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.b" date-time="2021-02-09T07:59:03.477Z" user="line-tofte">2.b</note>
-    <note type="updated" update="text-version" value="0.1.10" date-time="2021-02-09T07:59:03.477Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.1.11" date-time="2021-02-26T20:22:55.245Z" user="mike">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.a" date-time="2021-02-26T20:23:19.124Z" user="mike">2.a</note>
-    <note type="updated" update="text-version" value="0.1.12" date-time="2021-02-26T20:23:19.124Z" user="mike">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="2" date-time="2021-03-08T09:22:10.699Z" user="mike">2</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-08T09:22:10.699Z" user="mike">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-08T13:20:39.984Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="1" date-time="2021-03-19T00:50:36.398Z" user="mike">1</note>
-    <note type="updated" update="text-version" value="1.0.0" date-time="2021-03-19T00:50:36.398Z" user="mike">First published version</note>
-    <note type="updated" update="text-version" value="1.0.1" date-time="2021-03-19T17:47:55.543Z" user="konchog">Made about a dozen tiny fixes throughout.</note>
-    <note type="updated" update="text-version" value="1.0.2" date-time="2021-04-15T08:25:40.236Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="1.0.3" date-time="2021-06-09T12:15:29.604Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="lastUpdated" date-time="2022-06-29T16:04:10.098Z" user="admin">29/06/2022 16:04:10</note>
+                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-11-19T09:53:56.455Z" user="andreas">v 0.1.0</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:21:45.49Z" user="mike">2.d</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T10:59:57.706Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.1.1" date-time="2020-10-20T11:28:10.758Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.1.2" date-time="2020-10-20T11:29:10.266Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.1.3" date-time="2020-10-20T11:30:32.107Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2020-10-20T11:31:08.704Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.1.4" date-time="2020-10-20T11:31:08.704Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.5" date-time="2020-11-06T09:17:15.641Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2020-11-06T09:18:41.394Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.1.6" date-time="2020-11-06T09:18:41.394Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2021-01-12T12:35:08.998Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.1.7" date-time="2021-01-12T12:35:08.998Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2021-01-12T14:01:11.73Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.1.8" date-time="2021-01-12T14:01:11.73Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.9" date-time="2021-01-27T12:29:52.802Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2021-02-09T07:59:03.477Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.1.10" date-time="2021-02-09T07:59:03.477Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.11" date-time="2021-02-26T20:22:55.245Z" user="mike">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2021-02-26T20:23:19.124Z" user="mike">2.a</note>
+                <note type="updated" update="text-version" value="0.1.12" date-time="2021-02-26T20:23:19.124Z" user="mike">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2" date-time="2021-03-08T09:22:10.699Z" user="mike">2</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-08T09:22:10.699Z" user="mike">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-08T13:20:39.984Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="1" date-time="2021-03-19T00:50:36.398Z" user="mike">1</note>
+                <note type="updated" update="text-version" value="1.0.0" date-time="2021-03-19T00:50:36.398Z" user="mike">First published version</note>
+                <note type="updated" update="text-version" value="1.0.1" date-time="2021-03-19T17:47:55.543Z" user="konchog">Made about a dozen tiny fixes throughout.</note>
+                <note type="updated" update="text-version" value="1.0.2" date-time="2021-04-15T08:25:40.236Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="1.0.3" date-time="2021-06-09T12:15:29.604Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="1.0.4" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.0.5" date-time="2022-06-29T16:04:02.517Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -131,9 +128,10 @@
                         </div>
                         <div type="introduction">
                                 <head type="introduction" tid="5">Introduction</head>
-                                <milestone unit="chunk" xml:id="UT22084-076-003-3"/>
+                                <div type="section" xml:id="UT22084-076-003-introduction-1">
+                    <milestone unit="chunk" xml:id="UT22084-076-003-3"/>
                                 <p tid="6">
-                    <title xml:lang="en">The Account of the Noble Deeds of Śrīsena</title> belongs to one of the most beloved narrative genres in
+                        <title xml:lang="en">The Account of the Noble Deeds of Śrīsena</title> belongs to one of the most beloved narrative genres in
                                         Buddhism, the past life story (<foreign type="term" xml:lang="Sa-Ltn">avadāna</foreign>). It deals with one of the most powerful and
                                         pervasive themes in this genre, the bodhisattva’s bodily sacrifice for the benefit of living beings.<note place="end" xml:id="UT22084-076-003-4">
                                                 It is worth noting that although the subject of <term type="ignore">giving</term> away one’s life, bodily parts, or family members is
@@ -258,7 +256,7 @@
                                 </p>
                                 <milestone unit="chunk" xml:id="UT22084-076-003-21"/>
                                 <p tid="18">
-                    <title xml:lang="en">The Account of the Noble Deeds of Śrīsena</title> not only alludes to these other, more famous
+                        <title xml:lang="en">The Account of the Noble Deeds of Śrīsena</title> not only alludes to these other, more famous
                                         gift-of-the-body stories, but also follows their literary conventions closely. There are some obvious thematic
                                         similarities. Like the bodhisattvas in the other perfection of giving stories, for example, King Śrīsena is overjoyed at
                                         having the opportunity to perform such an enormous act of generosity. It is not every day that a person comes and asks a
@@ -284,6 +282,7 @@
                                 <milestone unit="chunk" xml:id="UT22084-076-003-24"/>
                                 <p tid="21">In producing this translation, we have based our work on the Degé xylograph while consulting
                                         the Comparative Edition (<title xml:lang="Bo-Ltn">dpe bsdur ma</title>), as well as the Stok Palace manuscript.</p>
+                </div>
                         </div>
                 </front>
                 <body>
@@ -915,7 +914,7 @@
                                         <milestone unit="chunk" xml:id="UT22084-076-003-136"/>
                                         <p tid="124"> “The sound of the bodhisattva’s utterly horrifying words created panic in the city as if they were lightning
                                                         strikes.<note place="end" xml:id="UT22084-076-003-137">
-                                                        <foreign xml:lang="Bo-Ltn" type="term">Rdo rje lhung</foreign> is a Tibetan
+                                                        <foreign xml:lang="Bo-Ltn" type="term">rdo rje lhung</foreign> is a Tibetan
                                                                 translation of the Sanskrit term <foreign xml:lang="Sa-Ltn" type="term">vajrapāta</foreign>, which means “the fall of a thunderbolt” or a
                                                                 “lightning strike.”</note> ‘Oh, the sorrow, the sorrow!’ the people cried in secret and
                                                 from on high. Then Mahāmati, the great minister, was wretched with intense pain, as if a vital organ had been
@@ -1565,16 +1564,14 @@
       </gloss>
     </item>
     <item>
-      <gloss type="term" xml:id="UT22084-076-003-264">
-        <term>giving</term>
-        <term xml:lang="Bo-Ltn">sbyin pa </term>
+                        <gloss xml:id="UT22084-076-003-264" type="term" mode="match">
+                            <term>giving</term>
+                            <term xml:lang="Bo-Ltn">sbyin pa</term>
                             <term xml:lang="bo">སྦྱིན་པ།</term>
-        <term xml:lang="Sa-Ltn">dāna</term>
-        <term type="definition">The first of the six or ten perfections, often explained as the essential starting point and training for the practice of the
-          others.</term>
-              <term type="alternative">generosity</term>
-      </gloss>
-    </item>
+                            <term xml:lang="Sa-Ltn">dāna</term>
+                            <term type="definition">See ”generosity.“</term>
+                        </gloss>
+                    </item>
     <item>
       <gloss type="term" xml:id="UT22084-076-003-265">
         <term>infer</term>
@@ -1626,14 +1623,14 @@
       </gloss>
     </item>
     <item>
-      <gloss type="term" xml:id="UT22084-076-003-271">
-        <term>the perfection of generosity</term>
-        <term xml:lang="Bo-Ltn">sbyin pa’i pha rol tu phyin pa </term>
-                            <term xml:lang="bo">སྦྱིན་པའི་ཕ་རོལ་ཏུ་ཕྱིན་པ།</term>
-        <term xml:lang="Sa-Ltn">dānapāramitā</term>
-        <term type="definition">The act of giving motivated by the wish to attain awakening for all sentient beings.</term>
-      </gloss>
-    </item>
+                        <gloss xml:id="UT22084-076-003-271" type="term" mode="match">
+                            <term>generosity</term>
+                            <term xml:lang="Bo-Ltn">sbyin pa</term>
+                            <term xml:lang="bo">སྦྱིན་པ།</term>
+                            <term xml:lang="Sa-Ltn">dāna</term>
+                            <term type="definition">The act of giving motivated by the wish to attain awakening for all sentient beings. It is the first of the six or ten perfections, often explained as the essential starting point and training for the practice of the others perfections. Also translated here as “giving.”</term>
+                        </gloss>
+                    </item>
     <item>
       <gloss type="term" xml:id="UT22084-076-003-272">
         <term>universal monarch who rules through force</term>
