--- a/translations/kangyur/translations/072-013_toh313,617,974-auspicious_night.xml
+++ b/translations/kangyur/translations/072-013_toh313,617,974-auspicious_night.xml
@@ -13,6 +13,7 @@
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་མཚན་མོ་བཟང་པོ་ཞེས་བྱ་བའི་མདོ།</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">bhadrakarātrīsūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">mtshan mo bzang po’i mdo/</title>
+                <title type="otherTitle" xml:lang="zh">《善夜經》（大正藏：《善夜經》）</title>
                 <author role="translatorMain" ref="eft:team-6">Translated by Bruno Galasek-Hul<lb/>under the patronage and supervision of 84000:
                     Translating the Words of the Buddha</author>
                 <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
@@ -29,7 +30,7 @@
                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.4 <date>2022</date>
+                <edition>v 1.0.6 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -84,7 +85,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-13T18:50:03.76Z" user="admin">13/05/2022 18:50:03</note>
+                <note type="lastUpdated" date-time="2022-06-29T16:09:01.791Z" user="admin">29/06/2022 16:09:01</note>
                 <note type="updated" update="text-version" value="" date-time="2019-09-26T06:58:17.409Z" user="andreas">0.1 2019</note>
                 <note type="updated" update="text-version" value="v 0.1.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement
                     updated</note>
@@ -121,12 +122,9 @@
                 <note type="updated" update="translation-status" value="2.a" date-time="2022-01-05T13:35:14.783Z" user="line-tofte">2.a</note>
                 <note type="updated" update="text-version" value="0.1.14" date-time="2022-01-05T13:35:14.783Z" user="line-tofte">Auto
                     (update-publication-status)</note>
-
                 <note type="updated" update="translation-status" value="2" date-time="2022-01-17T08:07:26.206Z" user="line-tofte">2</note>
-
                 <note type="updated" update="text-version" value="0.1.19" date-time="2022-01-17T08:07:26.206Z" user="line-tofte">Auto
                     (update-publication-status)</note>
-
                 <note type="updated" update="text-version" value="0.1.20" date-time="2022-02-04T12:58:53.531Z" user="line-tofte">Auto
                     (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.1.21" date-time="2022-03-04T09:06:12.043Z" user="line-tofte">Auto
@@ -142,6 +140,8 @@
                     with appendix displaying in navigation.</note>
                 <note type="updated" update="text-version" value="1.0.3" date-time="2022-04-11T12:19:51.636Z" user="laura">Bibliography update</note>
                 <note type="updated" update="text-version" value="1.0.4" date-time="2022-05-13T18:49:59.994Z" user="martina-cotter">Updated typo.</note>
+                <note type="updated" update="text-version" value="1.0.5" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.0.6" date-time="2022-06-29T16:08:54.238Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1444,7 +1444,7 @@
                             <term xml:lang="bo">ལྷའི་བུ།</term>
                             <term xml:lang="Sa-Ltn" status="verified">deva</term>
                             <term xml:lang="Sa-Ltn" status="verified">devaputra</term>
-                            <term type="definition">Cognate with the English term “divine,” the devas are most generically a class of divine,
+                            <!--<term type="definition">Cognate with the English term “divine,” the devas are most generically a class of divine,
                                 celestial beings who populate the narratives of Indian mythology. Devas make regular appearances in Buddhist
                                 literature at the head of the assemblies of celestial and supernatural beings who attend the <term type="ignore">teachings</term>, interact with the Buddha, bodhisattvas, and other spiritual figures, and celebrate the delivery
                                 of their sermons. In Buddhist cosmology, the devas are subdivided into numerous classes based on the specific devaloka
@@ -1454,7 +1454,7 @@
                                 higher mode of rebirth. Nonetheless, all the devalokas are within the three realms of saṃsāra and therefore
                                 transitory. Thus, while the devas occupy the highest strata within the scheme of the five or six “destinies” (gati),
                                 the realms within saṃsāra where beings take rebirth, their state is still one determined by the fetters (saṃyojana)
-                                that bind one to the perpetual cycle of rebirth. Also rendered here as “deva.”</term>
+                                that bind one to the perpetual cycle of rebirth. Also rendered here as “deva.”</term>AR: replaced by standard definition -->
                             <term type="alternative">deities</term>
                         </gloss>
                     </item>
